Fix: Decreases font sizes on small devices

--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -15,20 +15,20 @@
         --color-accent-strong: hsl(50, 100%, 60%);
         --text-caption-fs: .8rem;
         --text-caption-lh: 1.5;
-        --text-body-fs: 1rem;
+        --text-body-fs: 0.938rem;
         --text-body-lh: 1.6;
-        --text-lead-fs: 1.125rem;
+        --text-lead-fs: 1.172rem;
         --text-lead-lh: 1.45;
-        --text-heading-fs: 1.25rem;
+        --text-heading-fs: 1.172rem;
         --text-heading-lh: 1.3;
         --text-heading-ls: auto;
-        --text-heading-md-fs: 1.56rem;
+        --text-heading-md-fs: 1.465rem;
         --text-heading-md-lh: 1.3;
         --text-heading-md-ls: auto;
-        --text-heading-lg-fs: 1.56rem;
+        --text-heading-lg-fs: 1.465rem;
         --text-heading-lg-lh: 1.3;
         --text-heading-lg-ls: auto;
-        --text-display-fs: 2.441rem;
+        --text-display-fs: 2.289rem;
         --text-display-lh: 1.25;
         --text-display-ls: auto;
     }
